--- a/index.html
+++ b/index.html
@@ -6,10 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/images/logo_sin_fondo.png">
     <link rel="stylesheet" href="styles.css" />
+
     <title>GT</title>
 </head>
 <body class="fondo_index">
     <header>
+        <nav>
+            <div class="navbar">
+              <div class="container nav-container">
+                  <input class="checkbox" type="checkbox" name="" id="" />
+                  <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                  </div>  
+                <div class="menu-items">
+                  <li>
+                    <a href="nuestra_carta.html">CARTA</a>
+                  </li>
+                  <li>
+                    <a href="menu_del_dia.html">MENÚS</a>
+                  </li>
+                  <li>
+                    <a href="#">HORARIOS Y RESERVAS</a>
+                  </li>
+                  <li>
+                    <a href="#">HAZTE SOCIO</a>
+                  </li>
+                  <li>
+                    <a href="#">¿DÓNDE ESTAMOS?</a>
+                  </li>
+                </div>
+              </div>
+            </div>
+          </nav>
         <div class="contenedor"></div> 
             <div class="title">
                 <p>-THE GREEN TRUCK-</p>
@@ -19,7 +49,7 @@
     <div>
         <div class="quienes_somos">
             <h1>¿QUIENES SOMOS?</h1>
-            <div class="logo">
+            <div class="logo_nofondo">
                 <img src="/images/logo_sin_fondo.png" >
             </div>
         </div>
