--- a/nuestras_ensaladas.html
+++ b/nuestras_ensaladas.html
@@ -20,5 +20,66 @@
             <p>NUESTRAS ENSALADAS</p>
         </div>
     </div>
+    <div class="carta_ensaladas">
+        <div class="v-line"></div>
+        <div class="titulo1_ensaladas">
+            ENSALADAS VEGETARIANAS SIN GLUTEN
+        </div>
+        <div class="nombre_ensaladas">
+            PARAÍSO
+        </div>
+        <div class="descripcion_ensaladas">
+            Manzana, piña, kiwi, mango, naranja, salsa de yogurt y mango con 
+            frutas rojas de temporada (fresas, frambuesas, sandía)
+        </div>
+        <div class="precio_ensaladas">
+            12.95€
+        </div>
+        <div class="nombre_ensaladas">
+            ENSALADA TIBIA
+        </div>
+        <div class="descripcion_ensaladas">
+            Escalivada de cebolla, berenjena y pimientos y confitura de tomate.
+        </div>
+        <div class="precio_ensaladas">
+            13.95€
+        </div>
+        <div class="nombre_ensaladas">
+            GRIEGA
+        </div>
+        <div class="descripcion_ensaladas">
+            Con tomate, queso Feta, cebolla roja, pepino, aceitunas y orégano.
+        </div>
+        <div class="precio_ensaladas">
+            11.90€
+        </div>
+        <div class="nombre_ensaladas">
+            ARTEMISA - 7 COLORES
+        </div>
+        <div class="descripcion_ensaladas">
+            Lechuga, zanahoria, maíz, tomate, germinados, remolacha, aguacate y aceitunas.
+        </div>
+        <div class="precio_ensaladas">
+            11.95€
+        </div>
+        <div class="nombre_ensaladas">
+            AGUACATE
+        </div>
+        <div class="descripcion_ensaladas">
+            Aguacate con espárragos, zanahoria, tomate, nachos y salsa guacamole.
+        </div>
+        <div class="precio_ensaladas">
+            11.95€
+        </div>
+        <div class="nombre_ensaladas">
+            VERDE
+        </div>
+        <div class="descripcion_ensaladas">
+            Aguacate, brotes de espinaca, pepino, berros, canónigos, apio, germinados y pesto verde de anacardos.
+        </div>
+        <div class="precio_ensaladas">
+            11.90€
+        </div>
+    </div>
 </body>
 </html>
