--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="navbar">
               <div class="container nav-container">
-                  <input class="checkbox" type="checkbox" name="" id="" />
+                  <input class="checkbox" type="checkbox"/>
                   <div class="hamburger-lines">
                     <span class="line line1"></span>
                     <span class="line line2"></span>
@@ -22,13 +22,16 @@
                   </div>  
                 <div class="menu-items">
                   <li>
+                    <a href="index.html">INICIO</a>
+                  </li>
+                  <li>
                     <a href="nuestra_carta.html">CARTA</a>
                   </li>
                   <li>
                     <a href="menu_del_dia.html">MENÚS</a>
                   </li>
                   <li>
-                    <a href="#">HORARIOS Y RESERVAS</a>
+                    <a href="horarios_reservas.html">HORARIOS Y RESERVAS</a>
                   </li>
                   <li>
                     <a href="#">HAZTE SOCIO</a>
