--- a/ensaladas.html
+++ b/ensaladas.html
@@ -10,6 +10,38 @@
 </head>
 <body class="nuestra_carta_fondo">
     <header>
+        <nav>
+            <div class="navbar">
+              <div class="container nav-container">
+                  <input class="checkbox" type="checkbox"/>
+                  <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                  </div>  
+                <div class="menu-items">
+                  <li>
+                    <a href="index.html">INICIO</a>
+                  </li>
+                  <li>
+                    <a href="nuestra_carta.html">CARTA</a>
+                  </li>
+                  <li>
+                    <a href="menu_del_dia.html">MENÚS</a>
+                  </li>
+                  <li>
+                    <a href="horarios_reservas.html">HORARIOS Y RESERVAS</a>
+                  </li>
+                  <li>
+                    <a href="reserva.html">RESERVA</a>
+                  </li>
+                  <li>
+                    <a href="#">¿DÓNDE ESTAMOS?</a>
+                  </li>
+                </div>
+              </div>
+            </div>
+          </nav>
         <div class="contenedor_carta"></div> 
             <div class="title carta">
                 <p>-THE GREEN TRUCK-</p>
