--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="horarios_reservas.html">HORARIOS Y RESERVAS</a>
                   </li>
                   <li>
-                    <a href="#">HAZTE SOCIO</a>
+                    <a href="reserva.html">RESERVA</a>
                   </li>
                   <li>
                     <a href="#">¿DÓNDE ESTAMOS?</a>
