--- a/horarios_reservas.html
+++ b/horarios_reservas.html
@@ -33,7 +33,7 @@
                     <a href="horarios_reservas.html">HORARIOS Y RESERVAS</a>
                   </li>
                   <li>
-                    <a href="#">HAZTE SOCIO</a>
+                    <a href="#">RESERVA</a>
                   </li>
                   <li>
                     <a href="#">¿DÓNDE ESTAMOS?</a>
@@ -65,7 +65,9 @@
         De lunes a domingo: de 20:30 a 23:30
     </div>
     <button class="cta">
+      <a href="reserva.html">
         <span>RESERVAR</span>
+      </a>
         <svg viewBox="0 0 13 10" height="10px" width="15px">
           <path d="M1,5 L11,5"></path>
           <polyline points="8 1 12 5 8 9"></polyline>
