--- a/donde_estamos.html
+++ b/donde_estamos.html
@@ -50,21 +50,44 @@
     </header>
     <div class="nuestra_carta">
       <div class="nuestra_carta_titulo">
-        <p>HORARIOS</p>
+        <p>¿DÓNDE ESTAMOS?</p>
       </div>
     </div>
-    <div class="titulo_horarios">HORARIO DE COMIDAS:</div>
-    <div class="horario">De lunes a domingo: de 13:30 a 16:00</div>
-    <div class="titulo_horarios">HORARIO DE CENAS:</div>
-    <div class="horario">De lunes a domingo: de 20:30 a 23:30</div>
-    <button class="cta">
-      <a href="reserva.html">
-        <span>RESERVAR</span>
-      </a>
-      <svg viewBox="0 0 13 10" height="10px" width="15px">
-        <path d="M1,5 L11,5"></path>
-        <polyline points="8 1 12 5 8 9"></polyline>
-      </svg>
-    </button>
+    <div class="direccion_titulo">CÓMO LLEGAR AL RESTAURANTE:</div>
+    <div>
+      <p class="direccion">
+        El Restaurante The Green Truck se encuentra en el centro de Madrid, a
+        escasos metros de la calle de las Huertas y el barrio de las Cortes.
+      </p>
+      <br />
+      <p class="direccion_2">
+        Calle Ventura de la Vega, 4 (Huertas) <br />
+        28014 - Madrid
+      </p>
+      <p class="informacion">
+        Más información sobre
+        <a class="link_hr" href="horarios_reservas.html">horarios y reservas </a
+        >.
+      </p>
+    </div>
+    <div class="mapa_google">
+      <br />
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.676271417818!2d-3.701119148777973!3d40.41602186350474!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42288173a48fab%3A0x1df907c027c3e0ed!2sRestaurante%20Vegetariano%20Artemisa%20Sol%20-%20Huertas!5e0!3m2!1ses!2ses!4v1663772090156!5m2!1ses!2ses"
+        width="800"
+        height="600"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
+    <div class="informacion_metro">
+      Estaciones de metro próximas al restaurante:<br />
+
+      → Estación de Metro Sevilla: Línea 2 (roja)<br />
+
+      → Estación de Metro Sol: Líneas 1, 2 y 3 (azul, roja y amarilla)<br />
+    </div>
   </body>
 </html>
