--- a/index.html
+++ b/index.html
@@ -1,91 +1,108 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/images/logo_sin_fondo.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/images/logo_sin_fondo.png" />
     <link rel="stylesheet" href="styles.css" />
 
     <title>GT</title>
-</head>
-<body class="fondo_index">
+  </head>
+  <body class="fondo_index">
     <header>
-        <nav>
-            <div class="navbar">
-              <div class="container nav-container">
-                  <input class="checkbox" type="checkbox"/>
-                  <div class="hamburger-lines">
-                    <span class="line line1"></span>
-                    <span class="line line2"></span>
-                    <span class="line line3"></span>
-                  </div>  
-                <div class="menu-items">
-                  <li>
-                    <a href="index.html">INICIO</a>
-                  </li>
-                  <li>
-                    <a href="nuestra_carta.html">CARTA</a>
-                  </li>
-                  <li>
-                    <a href="menu_del_dia.html">MENÚS</a>
-                  </li>
-                  <li>
-                    <a href="horarios_reservas.html">HORARIOS Y RESERVAS</a>
-                  </li>
-                  <li>
-                    <a href="reserva.html">RESERVA</a>
-                  </li>
-                  <li>
-                    <a href="#">¿DÓNDE ESTAMOS?</a>
-                  </li>
-                </div>
-              </div>
+      <nav>
+        <div class="navbar">
+          <div class="container nav-container">
+            <a class="menu_letras">MENÚ</a>
+            <input class="checkbox" type="checkbox" />
+            <div class="hamburger-lines">
+              <span class="line line1"></span>
+              <span class="line line2"></span>
+              <span class="line line3"></span>
             </div>
-          </nav>
-        <div class="contenedor"></div> 
-            <div class="title">
-                <p>-THE GREEN TRUCK-</p>
-                <p>Es el momento de cambiar</p>
+            <div class="menu-items">
+              <li>
+                <a href="index.html">INICIO</a>
+              </li>
+              <li>
+                <a href="nuestra_carta.html">CARTA</a>
+              </li>
+              <li>
+                <a href="menu_del_dia.html">MENÚS</a>
+              </li>
+              <li>
+                <a href="horarios_reservas.html">HORARIOS Y RESERVAS</a>
+              </li>
+              <li>
+                <a href="reserva.html">RESERVA</a>
+              </li>
+              <li>
+                <a href="donde_estamos.html">¿DÓNDE ESTAMOS?</a>
+              </li>
             </div>
+          </div>
+        </div>
+      </nav>
+      <div class="contenedor"></div>
+      <div class="title">
+        <p>-THE GREEN TRUCK-</p>
+        <p>Es el momento de cambiar</p>
+      </div>
     </header>
     <div>
-        <div class="quienes_somos">
-            <h1>¿QUIENES SOMOS?</h1>
-            <div class="logo_nofondo">
-                <img src="/images/logo_sin_fondo.png" >
-            </div>
+      <div class="quienes_somos">
+        <h1>¿QUIENES SOMOS?</h1>
+        <div class="logo_nofondo">
+          <img src="/images/logo_sin_fondo.png" />
         </div>
-        <div class="texto_logo">
-            <p >Fundados en 1990, desde 2016 toda nuestra carta es 100% libre de gluten,
-                convirtiéndonos en los <br> primeros restaurantes vegetarianos 100% gluten free de España. <br>
-                De de ese modo acercamos la cocina vegetariana, 
-                vegana y sin gluten, a celíacos <br> y a las personas con intolerancia al gluten.
-            </p>
-            <br>
-            <p>
-                Los Restaurantes Green Truck fueron los primeros restaurantes vegetarianos en Madrid 
-                <br> en ofrecer una cocina sana, pero con una elaboración <br> esmerada, marcando de 
-                esta manera la diferencia con los locales <br> que ya existían con una opción vegetariana más básica 
-                y definiendo <br> el camino a los que vinieron después.
-            </p>
-        </div>
+      </div>
+      <div class="texto_logo">
+        <p>
+          Fundados en 1990, desde 2016 toda nuestra carta es 100% libre de
+          gluten, convirtiéndonos en los <br />
+          primeros restaurantes vegetarianos 100% gluten free de España. <br />
+          De de ese modo acercamos la cocina vegetariana, vegana y sin gluten, a
+          celíacos <br />
+          y a las personas con intolerancia al gluten.
+        </p>
+        <br />
+        <p>
+          Los Restaurantes Green Truck fueron los primeros restaurantes
+          vegetarianos en Madrid
+          <br />
+          en ofrecer una cocina sana, pero con una elaboración <br />
+          esmerada, marcando de esta manera la diferencia con los locales <br />
+          que ya existían con una opción vegetariana más básica y definiendo
+          <br />
+          el camino a los que vinieron después.
+        </p>
+      </div>
     </div>
     <div class="background_white">
-        <div class="title2">
-            <h1>SANO, FRESCO Y SABROSO</h1>
-        </div>
-        <div class="sano_sabroso">
-            <p>
-                "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium  <br> doloremque laudantium, totam rem aperiam, eaque ipsa quae ab <br> illo inventore 
-                veritatis et quasi architecto beatae vitae dicta sunt <br> explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut <br> fugit, sed quia 
-                consequuntur magni dolores <br> eos qui ratione voluptatem sequi nesciunt."
-                En Menssana combinamos cocina creativa, muy bien  <br> presentada, sana y deliciosa con <br> un servicio amable y conocedor en un magnífico espacio duplex. 
-                <br> Ofrecemos simplicidad y sofisticación en nuestras inspiradas creaciones, <br> compuestas por una selección de ingredientes locales de temporada.
-            </p>
-        </div>
-        <img class="ensalada "src="/images/ensalada.png" >
+      <div class="title2">
+        <h1>SANO, FRESCO Y SABROSO</h1>
+      </div>
+      <div class="sano_sabroso">
+        <p>
+          "Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+          accusantium <br />
+          doloremque laudantium, totam rem aperiam, eaque ipsa quae ab <br />
+          illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+          <br />
+          explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+          odit aut <br />
+          fugit, sed quia consequuntur magni dolores <br />
+          eos qui ratione voluptatem sequi nesciunt." En Menssana combinamos
+          cocina creativa, <br />
+          muy bien presentada, sana y deliciosa con <br />
+          un servicio amable y conocedor en un magnífico espacio duplex. <br />
+          Ofrecemos simplicidad y sofisticación en nuestras inspiradas
+          creaciones, <br />
+          compuestas por una selección de ingredientes locales de temporada.
+        </p>
+      </div>
+      <img class="ensalada" src="/images/ensalada.png" />
     </div>
-    
-</body>
+  </body>
 </html>
