--- a/menu_del_dia.html
+++ b/menu_del_dia.html
@@ -13,12 +13,13 @@
       <nav>
         <div class="navbar">
           <div class="container nav-container">
-              <input class="checkbox" type="checkbox"/>
-              <div class="hamburger-lines">
-                <span class="line line1"></span>
-                <span class="line line2"></span>
-                <span class="line line3"></span>
-              </div>  
+            <a class="menu_letras">MENÚ</a>
+            <input class="checkbox" type="checkbox" />
+            <div class="hamburger-lines">
+              <span class="line line1"></span>
+              <span class="line line2"></span>
+              <span class="line line3"></span>
+            </div>
             <div class="menu-items">
               <li>
                 <a href="index.html">INICIO</a>
@@ -36,7 +37,7 @@
                 <a href="reserva.html">RESERVA</a>
               </li>
               <li>
-                <a href="#">¿DÓNDE ESTAMOS?</a>
+                <a href="donde_estamos.html">¿DÓNDE ESTAMOS?</a>
               </li>
             </div>
           </div>
@@ -60,34 +61,40 @@
     <div class="menu_del_dia_titulos">PRIMEROS</div>
     <div class="menu_del_dia_subtitulos">Opciones a elegir</div>
     <div class="menu_platos">
-      Lentejas estofadas (veganas). <br><br>
-      Salmorejo cordobés con huevo (opción vegana).<br><br>
-       Crema de cebolla y almendras (vegana).<br><br>
-       Ensalada Moruna: lechuga, garbanzos, vinagreta de cilantro, remolacha, tomate, aceitunas (vegana).
+      Lentejas estofadas (veganas). <br /><br />
+      Salmorejo cordobés con huevo (opción vegana).<br /><br />
+      Crema de cebolla y almendras (vegana).<br /><br />
+      Ensalada Moruna: lechuga, garbanzos, vinagreta de cilantro, remolacha,
+      tomate, aceitunas (vegana).
     </div>
     <div class="menu_del_dia_titulos">SEGUNDOS</div>
     <div class="menu_del_dia_subtitulos">Elegir entre A o B</div>
     <div class="menu_platos">
-        <p class="opciones_menu">Opción A:</p> PLATO DEGUSTACIÓN que incluye​:<br><br>
-        Arroz con alcachofas, espárragos trigueros, ajetes, pimiento rojo y champiñones (vegano).<br><br>
-        Escalope de queso fresco al pimentón de La Vera.<br><br>
-        Asado de verduras al curry (vegano).<br><br>
-        Polenta al pesto (vegana).<br><br>
-        <p class="opciones_menu">Opción B:</p> Berenjena rellena de hortalizas y queso feta, con guarnición de quinoa (opción vegana).
+      <p class="opciones_menu">Opción A:</p>
+      PLATO DEGUSTACIÓN que incluye​:<br /><br />
+      Arroz con alcachofas, espárragos trigueros, ajetes, pimiento rojo y
+      champiñones (vegano).<br /><br />
+      Escalope de queso fresco al pimentón de La Vera.<br /><br />
+      Asado de verduras al curry (vegano).<br /><br />
+      Polenta al pesto (vegana).<br /><br />
+      <p class="opciones_menu">Opción B:</p>
+      Berenjena rellena de hortalizas y queso feta, con guarnición de quinoa
+      (opción vegana).
     </div>
     <div class="menu_del_dia_titulos">POSTRES</div>
     <div class="menu_del_dia_subtitulos">Opciones a elegir</div>
     <div class="menu_platos">
-        Tarta de chocolate y calabaza.<br><br>
-        Tarta de zanahoria y crema de queso.<br><br>
-        Tarta de ricotta y guayaba.<br><br>
-        Tarta de almendras y albaricoque.<br><br>
-        Pastel de natillas, soja y cacao (vegano).<br><br>
-        Yogur griego con mermelada de moras y chía.<br><br>
-        Melón.<br><br>
+      Tarta de chocolate y calabaza.<br /><br />
+      Tarta de zanahoria y crema de queso.<br /><br />
+      Tarta de ricotta y guayaba.<br /><br />
+      Tarta de almendras y albaricoque.<br /><br />
+      Pastel de natillas, soja y cacao (vegano).<br /><br />
+      Yogur griego con mermelada de moras y chía.<br /><br />
+      Melón.<br /><br />
     </div>
     <div class="precio_menu">
-        El menú incluye pan, bebida y postre ó café:  13,90 € (IVA incluido). <br>
+      El menú incluye pan, bebida y postre ó café: 13,90 € (IVA incluido).
+      <br />
     </div>
   </body>
 </html>
