--- a/nuestras_ensaladas.html
+++ b/nuestras_ensaladas.html
@@ -1,117 +1,94 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="/images/logo_sin_fondo.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/images/logo_sin_fondo.png" />
     <link rel="stylesheet" href="styles.css" />
     <title>GT</title>
-</head>
-<body class="nuestra_carta_fondo">
+  </head>
+  <body class="nuestra_carta_fondo">
     <header>
-        <nav>
-            <div class="navbar">
-              <div class="container nav-container">
-                  <input class="checkbox" type="checkbox"/>
-                  <div class="hamburger-lines">
-                    <span class="line line1"></span>
-                    <span class="line line2"></span>
-                    <span class="line line3"></span>
-                  </div>  
-                <div class="menu-items">
-                  <li>
-                    <a href="index.html">INICIO</a>
-                  </li>
-                  <li>
-                    <a href="nuestra_carta.html">CARTA</a>
-                  </li>
-                  <li>
-                    <a href="menu_del_dia.html">MENÚS</a>
-                  </li>
-                  <li>
-                    <a href="horarios_reservas.html">HORARIOS Y RESERVAS</a>
-                  </li>
-                  <li>
-                    <a href="reserva.html">RESERVA</a>
-                  </li>
-                  <li>
-                    <a href="#">¿DÓNDE ESTAMOS?</a>
-                  </li>
-                </div>
-              </div>
+      <nav>
+        <div class="navbar">
+          <div class="container nav-container">
+            <a class="menu_letras">MENÚ</a>
+            <input class="checkbox" type="checkbox" />
+            <div class="hamburger-lines">
+              <span class="line line1"></span>
+              <span class="line line2"></span>
+              <span class="line line3"></span>
             </div>
-          </nav>
-        <div class="contenedor_carta"></div> 
-            <div class="title carta">
-                <p>-THE GREEN TRUCK-</p>
+            <div class="menu-items">
+              <li>
+                <a href="index.html">INICIO</a>
+              </li>
+              <li>
+                <a href="nuestra_carta.html">CARTA</a>
+              </li>
+              <li>
+                <a href="menu_del_dia.html">MENÚS</a>
+              </li>
+              <li>
+                <a href="horarios_reservas.html">HORARIOS Y RESERVAS</a>
+              </li>
+              <li>
+                <a href="reserva.html">RESERVA</a>
+              </li>
+              <li>
+                <a href="donde_estamos.html">¿DÓNDE ESTAMOS?</a>
+              </li>
             </div>
+          </div>
+        </div>
+      </nav>
+      <div class="contenedor_carta"></div>
+      <div class="title carta">
+        <p>-THE GREEN TRUCK-</p>
+      </div>
     </header>
     <div class="nuestra_carta">
-        <div class="nuestra_carta_titulo">
-            <p>NUESTRAS ENSALADAS</p>
-        </div>
+      <div class="nuestra_carta_titulo">
+        <p>NUESTRAS ENSALADAS</p>
+      </div>
     </div>
     <div class="carta_ensaladas">
-        <div class="v-line"></div>
-        <div class="titulo1_ensaladas">
-            ENSALADAS VEGETARIANAS SIN GLUTEN
-        </div>
-        <div class="nombre_ensaladas">
-            PARAÍSO
-        </div>
-        <div class="descripcion_ensaladas">
-            Manzana, piña, kiwi, mango, naranja, salsa de yogurt y mango con 
-            frutas rojas de temporada (fresas, frambuesas, sandía)
-        </div>
-        <div class="precio_ensaladas">
-            12.95€
-        </div>
-        <div class="nombre_ensaladas">
-            ENSALADA TIBIA
-        </div>
-        <div class="descripcion_ensaladas">
-            Escalivada de cebolla, berenjena y pimientos y confitura de tomate.
-        </div>
-        <div class="precio_ensaladas">
-            13.95€
-        </div>
-        <div class="nombre_ensaladas">
-            GRIEGA
-        </div>
-        <div class="descripcion_ensaladas">
-            Con tomate, queso Feta, cebolla roja, pepino, aceitunas y orégano.
-        </div>
-        <div class="precio_ensaladas">
-            11.90€
-        </div>
-        <div class="nombre_ensaladas">
-            ARTEMISA - 7 COLORES
-        </div>
-        <div class="descripcion_ensaladas">
-            Lechuga, zanahoria, maíz, tomate, germinados, remolacha, aguacate y aceitunas.
-        </div>
-        <div class="precio_ensaladas">
-            11.95€
-        </div>
-        <div class="nombre_ensaladas">
-            AGUACATE
-        </div>
-        <div class="descripcion_ensaladas">
-            Aguacate con espárragos, zanahoria, tomate, nachos y salsa guacamole.
-        </div>
-        <div class="precio_ensaladas">
-            11.95€
-        </div>
-        <div class="nombre_ensaladas">
-            VERDE
-        </div>
-        <div class="descripcion_ensaladas">
-            Aguacate, brotes de espinaca, pepino, berros, canónigos, apio, germinados y pesto verde de anacardos.
-        </div>
-        <div class="precio_ensaladas">
-            11.90€
-        </div>
+      <div class="v-line"></div>
+      <div class="titulo1_ensaladas">ENSALADAS VEGETARIANAS SIN GLUTEN</div>
+      <div class="nombre_ensaladas">PARAÍSO</div>
+      <div class="descripcion_ensaladas">
+        Manzana, piña, kiwi, mango, naranja, salsa de yogurt y mango con frutas
+        rojas de temporada (fresas, frambuesas, sandía)
+      </div>
+      <div class="precio_ensaladas">12.95€</div>
+      <div class="nombre_ensaladas">ENSALADA TIBIA</div>
+      <div class="descripcion_ensaladas">
+        Escalivada de cebolla, berenjena y pimientos y confitura de tomate.
+      </div>
+      <div class="precio_ensaladas">13.95€</div>
+      <div class="nombre_ensaladas">GRIEGA</div>
+      <div class="descripcion_ensaladas">
+        Con tomate, queso Feta, cebolla roja, pepino, aceitunas y orégano.
+      </div>
+      <div class="precio_ensaladas">11.90€</div>
+      <div class="nombre_ensaladas">ARTEMISA - 7 COLORES</div>
+      <div class="descripcion_ensaladas">
+        Lechuga, zanahoria, maíz, tomate, germinados, remolacha, aguacate y
+        aceitunas.
+      </div>
+      <div class="precio_ensaladas">11.95€</div>
+      <div class="nombre_ensaladas">AGUACATE</div>
+      <div class="descripcion_ensaladas">
+        Aguacate con espárragos, zanahoria, tomate, nachos y salsa guacamole.
+      </div>
+      <div class="precio_ensaladas">11.95€</div>
+      <div class="nombre_ensaladas">VERDE</div>
+      <div class="descripcion_ensaladas">
+        Aguacate, brotes de espinaca, pepino, berros, canónigos, apio,
+        germinados y pesto verde de anacardos.
+      </div>
+      <div class="precio_ensaladas">11.90€</div>
     </div>
-</body>
+  </body>
 </html>
