--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/images/logo_sin_fondo.png" />
+    <link rel="icon" type="image/x-icon" href="images/logo_sin_fondo.png" />
     <link rel="stylesheet" href="styles.css" />
 
     <title>GT</title>
@@ -54,7 +54,7 @@
       <div class="quienes_somos">
         <h1>¿QUIENES SOMOS?</h1>
         <div class="logo_nofondo">
-          <img src="/images/logo_sin_fondo.png" />
+          <img src="images/logo_sin_fondo.png" />
         </div>
       </div>
       <div class="texto_logo">
@@ -102,7 +102,7 @@
           compuestas por una selección de ingredientes locales de temporada.
         </p>
       </div>
-      <img class="ensalada" src="/images/ensalada.png" />
+      <img class="ensalada" src="images/ensalada.png" />
     </div>
   </body>
 </html>
