--- a/nuestra_carta.html
+++ b/nuestra_carta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/images/logo_sin_fondo.png" />
+    <link rel="icon" type="image/x-icon" href="images/logo_sin_fondo.png" />
     <link rel="stylesheet" href="styles.css" />
     <title>GT</title>
   </head>
@@ -59,7 +59,7 @@
         <div class="flip-card-inner">
           <div class="flip-card-front">
             <img
-              src="/images/ensalada_carta.png"
+              src="images/ensalada_carta.png"
               alt="Avatar"
               style="width: 300px; height: 300px"
             />
@@ -79,7 +79,7 @@
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img
-            src="/images/pizza.png"
+            src="images/pizza.png"
             alt="Avatar"
             style="width: 300px; height: 300px"
           />
@@ -98,7 +98,7 @@
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img
-            src="/images/poke_bowl.png"
+            src="images/poke_bowl.png"
             alt="Avatar"
             style="width: 300px; height: 300px"
           />
@@ -117,7 +117,7 @@
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img
-            src="/images/postre.png"
+            src="images/postre.png"
             alt="Avatar"
             style="width: 300px; height: 300px"
           />
