--- a/ensaladas.html
+++ b/ensaladas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/images/logo_sin_fondo.png" />
+    <link rel="icon" type="image/x-icon" href="images/logo_sin_fondo.png" />
     <link rel="stylesheet" href="styles.css" />
     <title>GT</title>
   </head>
@@ -54,15 +54,15 @@
       </div>
     </div>
     <div class="ensalada_carta">
-      <img class="fotos_carta" src="/images/ensalada_carta.png" />
+      <img class="fotos_carta" src="images/ensalada_carta.png" />
       <p class="cartas_titulo">ENSALADAS</p>
     </div>
     <div class="pizza_carta">
-      <img class="fotos_carta" src="/images/pizza.png" />
+      <img class="fotos_carta" src="images/pizza.png" />
       <p class="cartas_titulo">PIZZAS</p>
     </div>
     <div class="poke_bowls">
-      <img class="fotos_carta" src="/images/poke_bowl.png" />
+      <img class="fotos_carta" src="images/poke_bowl.png" />
       <p class="cartas_titulo">POKE BOWLS</p>
     </div>
   </body>
