--- a/index.html
+++ b/index.html
@@ -57,24 +57,19 @@
           <img src="images/logo_sin_fondo.png" />
         </div>
       </div>
-      <div class="texto_logo">
+      <div style="text-align: justify" class="texto_logo">
         <p>
           Fundados en 1990, desde 2016 toda nuestra carta es 100% libre de
-          gluten, convirtiéndonos en los <br />
-          primeros restaurantes vegetarianos 100% gluten free de España. <br />
+          gluten, convirtiéndonos en los primeros restaurantes vegetarianos 100% gluten free de España.
           De de ese modo acercamos la cocina vegetariana, vegana y sin gluten, a
-          celíacos <br />
-          y a las personas con intolerancia al gluten.
+          celíacos y a las personas con intolerancia al gluten.
         </p>
         <br />
         <p>
           Los Restaurantes Green Truck fueron los primeros restaurantes
-          vegetarianos en Madrid
-          <br />
-          en ofrecer una cocina sana, pero con una elaboración <br />
-          esmerada, marcando de esta manera la diferencia con los locales <br />
+          vegetarianos en Madrid en ofrecer una cocina sana, pero con una elaboración
+          esmerada, marcando de esta manera la diferencia con los locales
           que ya existían con una opción vegetariana más básica y definiendo
-          <br />
           el camino a los que vinieron después.
         </p>
       </div>
@@ -83,23 +78,18 @@
       <div class="title2">
         <h1>SANO, FRESCO Y SABROSO</h1>
       </div>
-      <div class="sano_sabroso">
+      <div style="text-align: justify" class="sano_sabroso">
         <p>
           "Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium <br />
-          doloremque laudantium, totam rem aperiam, eaque ipsa quae ab <br />
+          accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab 
           illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-          <br />
           explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
-          odit aut <br />
-          fugit, sed quia consequuntur magni dolores <br />
+          odit aut fugit, sed quia consequuntur magni dolores
           eos qui ratione voluptatem sequi nesciunt." En Menssana combinamos
-          cocina creativa, <br />
-          muy bien presentada, sana y deliciosa con <br />
-          un servicio amable y conocedor en un magnífico espacio duplex. <br />
+          cocina creativa, muy bien presentada, sana y deliciosa con 
+          un servicio amable y conocedor en un magnífico espacio duplex.
           Ofrecemos simplicidad y sofisticación en nuestras inspiradas
-          creaciones, <br />
-          compuestas por una selección de ingredientes locales de temporada.
+          creaciones, compuestas por una selección de ingredientes locales de temporada.
         </p>
       </div>
       <img class="ensalada" src="images/ensalada.png" />
